# wagtail-retail

./: README.md  pyproject.toml
client/: package.json
sandbox/: urls.py
sandbox/basket/: apps.py  models.py
sandbox/basket/migrations/: 0001_initial.py
sandbox/basket/templates/basket/: basket_page.html
sandbox/catalogue/: apps.py  models.py
sandbox/catalogue/migrations/: 0001_initial.py
sandbox/catalogue/templates/catalogue/: product_page.html
sandbox/home/: apps.py
sandbox/search/: apps.py
sandbox/settings/: base.py  dev.py
sandbox/shop/: models.py
sandbox/shop/migrations/: 0001_initial.py  0002_productpage_list_description_productpage_main_image.py  0002_productvariantpage.py  0003_rename_list_description_productpage_summary.py  0004_productpage_body.py
sandbox/templates/shop/: index.html  shop_home_page.html
sandbox/utils/: apps.py  models.py
sandbox/utils/migrations/: 0001_initial.py
wagtail_retail/: conf.py
wagtail_retail/basket/: apps.py
wagtail_retail/billing/: apps.py
wagtail_retail/checkout/: apps.py
wagtail_retail/core/: apps.py  models.py
wagtail_retail/core/migrations/: 0001_initial.py
wagtail_retail/core/templates/wagtail_retail/core/pages/: product_page.html  shop_home_page.html  variants.html
wagtail_retail/core/templatetags/: wagtailretailcore_tags.py
wagtail_retail/order/: apps.py
