[tool.poetry]
name = "wagtail-retail"
version = "0.1.0"
description = ""
authors = ["Nick Moreton <nick.moreton@torchbox.com>"]
readme = "README.md"
packages = [{include = "wagtail_retail"}]

[tool.poetry.dependencies]
python = "^3.8"
wagtail = "^5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
